# Homepage

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.kiro/specs/photographer-portfolio-backend/: .config.kiro  checklist.md  design.md  requirements.md  tasks.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: about.py  ai_entries.py  analytics.py  auth.py  business_inquiries.py  collections.py  photos.py  videos.py
backend/app/core/: config.py  http_security.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  about_content.py  admin_user.py  ai_entry.py  analytics_event.py  audit_log.py  business_inquiry.py  collection.py  home_video.py  jwt_blacklist.py  photo.py
backend/app/schemas/: about.py  ai_entries.py  analytics.py  auth.py  business_inquiries.py  collections.py  photos.py  videos.py
backend/app/services/: analytics.py  audit.py  business_inquiries.py  file_validation.py  storage.py  thumbnails.py  video_processing.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_init.py  0002_analytics_task3.py  0002_task2_media_content.py  0003_merge_task2_and_analytics_heads.py  0004_task14_business_inquiries.py  0005_internal_inbox_read_status.py  0006_home_video_optimized_variant.py  0007_home_text_content.py
scripts/: start-local-minio.sh
src/: react-responsive-masonry.d.ts
src/app/: App.tsx  routes.tsx
src/styles/: theme.css
(+42 files in other folders)
