 [project]
 name = "homepage-backend"
 version = "0.1.0"
 description = "Backend for photographer portfolio"
 requires-python = ">=3.10"
 dependencies = [
   "fastapi>=0.115.0",
   "uvicorn[standard]>=0.30.0",
   "pydantic>=2.8.0",
   "pydantic-settings>=2.4.0",
   "python-multipart>=0.0.9",
   "sqlalchemy>=2.0.30",
   "psycopg[binary]>=3.2.0",
   "alembic>=1.13.2",
  "certifi>=2024.8.30",
   "boto3>=1.34.0",
   "pillow>=10.4.0",
  "bcrypt>=5.0.0",
   "pyjwt>=2.9.0",
   "slowapi>=0.1.9",
   "cachetools>=5.5.0",
 ]
 
 [tool.uv]
 dev-dependencies = [
   "ruff>=0.5.0",
 ]
 
 [tool.ruff]
 line-length = 100
 
